# seq-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build_and_test.yml  codecov.yml  codeql.yml  devskim.yml
benches/: benchmark_diagram_parsing.rs  benchmark_document_parsing.rs  benchmark_parsing.rs  benchmark_rendering.rs  parser_benchmarks.rs  renderer_benchmarks.rs  text_benchmarks.rs
src/: cli.rs  diagram.rs  lib.rs  main.rs  mod.rs  model.rs  parser.rs  render_context.rs  rendering.rs  text.rs  theme.rs
src/parsing/: document.rs  interaction.rs  mod.rs  participant.rs
src/rendering/: drawing.rs  mod.rs  render_context.rs  shapes.rs  text.rs
src/v2/: mod.rs  parsing.rs
src/v2/rendering/: drawing.rs  mod.rs  render_context.rs  shapes.rs  text.rs
src/v3/: diagram.rs  mod.rs  model.rs  parsing.rs  theme.rs
src/v3/parsing/: document.rs  interaction.rs  participant.rs
src/v3/rendering/: mod.rs  text.rs
