[package]
name = "sequencer"
version = "0.1.0"
authors = ["Richard South <southy98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
itertools = "0.10.0"
raqote = { version = "0.8.0", features = ["pathfinder_geometry"] }
pathfinder_geometry = "0.5.1"
euclid = "0.22.3"
smallvec = "1.6.1"
lazy_static = "1.4.0"
fontdue = "0.5.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark_parsing"
harness = false

#[[bench]]
#name = "benchmark_rendering"
#harness = false

#[[bench]]
#name = "text_benchmarks"
#harness = false
