[package]
name = "sequencer"
version = "0.1.0"
authors = ["Richard South <southy98@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
regex = "1"
itertools = "0.14"
raqote = { version = "0.8", features = ["pathfinder_geometry"] }
pathfinder_geometry = "0.5"
euclid = "0.22"
smallvec = "1"
fontdue = "0.9"
clap = { version = "4", features = ["derive", "cargo"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmark_diagram_parsing"
harness = false

[[bench]]
name = "benchmark_document_parsing"
harness = false

[[bench]]
name = "benchmark_rendering"
harness = false

[[bench]]
name = "text_benchmarks"
harness = false
